[gd_scene load_steps=4 format=3 uid="uid://d33jqhneq7ijh"]

[ext_resource type="Script" path="res://shop/item_slot.gd" id="1_4mana"]

[sub_resource type="SphereMesh" id="SphereMesh_v8ttl"]
radius = 0.05
height = 0.1

[sub_resource type="BoxShape3D" id="BoxShape3D_xsgvy"]
size = Vector3(0.2, 0.2, 0.2)

[node name="ItemSlot" type="Node3D"]
script = ExtResource("1_4mana")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0513656, 0)
mesh = SubResource("SphereMesh_v8ttl")

[node name="Area3D" type="Area3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/Area3D"]
shape = SubResource("BoxShape3D_xsgvy")

[connection signal="mouse_entered" from="MeshInstance3D/Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="MeshInstance3D/Area3D" to="." method="_on_area_3d_mouse_exited"]
